# AlpacaTradingBot

./: .gitignore  .project  ARTIFACT_POLICY_AUDIT.md  ARTIFACT_STORAGE_POLICY.md  AlpacaTradingBot.spec  CLEANUP_AUDIT.md  DESKTOP_REMOVAL_AUDIT.md  LEGACY_RESEARCH_AUDIT.md  Legacy Python Launcher.pyw  OPERATIONS.md  Open AlpacaTradingBot App.pyw  PROJECT_MAP.md  README.md  RESEARCH_BOUNDARY_AUDIT.md  RESEARCH_STRUCTURE_PLAN.md  RESULTS_CURATION_AUDIT.md  RESULTS_CURATION_PLAN.md  TRADING_SPEC.md  V2_CLEANUP_EXECUTION_PLAN.md  audit_dataset_spacing.py  avatar.py  backtest_runner.py  bot.ps1  botlog.py  breakout_eval.py  breakout_sweep.py  build_exe.ps1  compare_mr_strategies.py  create_desktop_shortcut.ps1  daily_report.py  dashboard.py  dashboard_state.py  dataset_snapshotter.py  drift_monitor.py  inspect_dataset_and_run.py  investigate_missing_bars.py  launch_control_panel.py  packaged_app_entry.py  pyproject.toml  rebuild_research_dataset_sip.py  (+37 more)
.claude/: settings.local.json
alpaca_trading_bot/: __init__.py  cli.py
config/: live_config.json  live_config.pruned_candidate.json  momentum_breakout.example.json  trend_pullback.example.json  volatility_expansion.example.json
desktop_app/: app.py  dashboard_home.py  paths.py  repo_status.py  runner.py
ml/: __init__.py  feature_pipeline.py  predict.py  train.py
repo_quarantine/: README.md
research/: __init__.py  audit_dataset_spacing.py  canonical_cross_sectional_rank_pullback_v1.md  canonical_rank_pullback.py  canonical_rank_pullback_diagnosis.md  canonical_rank_signal_comparison_return20_vs_return20plus60.md  experiment_log.py  how_to_run_signal_tests.md  inspect_dataset_and_run.py  investigate_missing_bars.py  ranking_first_validation_note.md  rebuild_research_dataset_sip.py  rebuild_research_dataset_sip_clean.py  run_canonical_cross_sectional_rank_audit.py  run_canonical_rank_pullback_validation.py  run_cross_sectional_edge_audit.py  run_edge_audit.py  run_edge_diagnostics.py  run_feed_comparison_validation.py  run_hybrid_bb_mr_research.py  run_long_horizon_validation.py  run_momentum_breakout_validation.py  run_trade_path_diagnostics.py  run_trend_pullback_clean_dataset_comparison.py  run_trend_pullback_exit_capture_clean.py  run_trend_pullback_exit_comparison.py  run_trend_pullback_oos_validation.py  run_trend_pullback_robustness.py  run_trend_pullback_robustness_clean.py  run_volatility_expansion_validation.py  signal_experiment_log.md  signal_testing_checklist.md  trend_consistency_20_audit_note.md  trend_consistency_20_x_slope_20_over_atr_20_robustness_note.md  trend_consistency_20_x_slope_20_over_atr_20_validation_note.md  trend_consistency_slope_atr_early_exit_validation_note.md  trend_consistency_slope_atr_failure_analysis.md  trend_consistency_slope_atr_follow_through_filter_note.md  trend_consistency_slope_atr_trade_level_analysis.md
results/: README.md  best_config_latest.json  bollinger_squeeze_smoke.csv  bollinger_squeeze_smoke_per_symbol.csv  bollinger_squeeze_smoke_robust_top10.csv  bollinger_squeeze_smoke_winner_by_symbol.csv  bot_reevaluation.md  breakout_39syms_oct25_apr26.csv  (+119 more)
(+529 files in other folders)
