[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-trading-bot"
version = "0.1.0"
description = "Installable CLI and desktop launcher for the AlpacaTradingBot workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py",
    "python-dotenv",
    "pytz",
    "streamlit",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "plotly",
    "customtkinter",
]

[project.scripts]
alpaca-bot = "alpaca_trading_bot.cli:main"

[project.gui-scripts]
alpaca-bot-gui = "desktop_app.app:main"

[tool.setuptools]
py-modules = [
    "backtest_runner",
    "botlog",
    "daily_report",
    "dashboard",
    "dataset_snapshotter",
    "run_backtest_experiments",
    "run_research",
    "storage",
    "strategy",
    "trading_bot",
    "universe",
]

[tool.setuptools.packages.find]
include = ["alpaca_trading_bot", "desktop_app", "ml"]

[tool.setuptools.package-data]
ml = ["models/*.pkl"]
