[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpaca-trading-bot"
version = "0.1.0"
description = "Installable CLI for the AlpacaTradingBot workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py",
    "python-dotenv",
    "pytz",
    "streamlit",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "plotly",
]

[project.scripts]
alpaca-bot = "alpaca_trading_bot.cli:main"

[tool.setuptools]
py-modules = [
    "backtest_runner",
    "botlog",
    "daily_report",
    "dashboard",
    "dataset_snapshotter",
    "run_backtest_experiments",
    "run_research",
    "storage",
    "strategy",
    "trading_bot",
    "universe",
]

[tool.setuptools.packages.find]
include = ["alpaca_trading_bot", "ml"]

[tool.setuptools.package-data]
ml = ["models/*.pkl"]
